# my_deep_research

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.opensearch.yml  langgraph.json  pyproject.toml  requirements.txt
docs/: ANTIGRAVITY_PROXY_FIX.md  LATS_DESIGN.md  OPENSEARCH_SETUP.md  PROGRESS.md  REPRODUCTION_GUIDE.md  TODO.md
eval/: EVALUATION_GUIDE.md  PHASE1_SUMMARY.md  PHASE2_DATA_FLOW.md  PHASE2_PLAN.md  PHASE2_SUMMARY.md  PHASE3_SUMMARY.md  README.md  README_GROUND_TRUTH.md  STATE_CONTEXT_CONTROL.md  article_labels_v2.json  eval_findings.py  eval_rag.py  eval_rag_retrieval.py  event_to_articles.json  example_usage.py  finding_extractor.py  finding_matcher.py  finding_schema.py  ground_truth_stats.txt  prepare_ground_truth.py  test_return_details.py
rag/: bm25_search.py  config.py  opensearch_client.py  opensearch_search.py  rag_search.py  requirements.txt  reranker.py
rag/scripts/: build_opensearch_index.py
rag/tests/: test_opensearch_search.py
scripts/: analyze_rag_run.py  analyze_run.py  export_rag_run.py  export_rag_run_v2.py  export_rag_subgraph_analysis.py  export_researcher_run.py  export_run.py  extract_researcher_results.py
src/: configuration.py  graph.py  prompts.py  rag_subgraph.py  runner.py  state.py  utils.py
tests/: test_phase1.py  test_phase2.py  test_phase4.py  test_rag_subgraph.py
